# NexusMiner

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.ini  miner.conf  offsets.ini  origins.ini
src/: CMakeLists.txt  config.cpp  config.hpp  main.cpp  miner.cpp  miner.hpp  packet.hpp  stats_collector.cpp  timer_manager.cpp  timer_manager.hpp  version.h.in  worker.hpp  worker_manager.cpp  worker_manager.hpp
src/CUDA/: constants.cu  streams_events.cu  util.cu
src/CUDA/hash/: sk1024.cu
src/CUDA/include/: combo_sieve.cuh  combo_sieve.h  constants.cuh  constants.h  fermat.cuh  fermat.h  frame_resources.h  hash_helper.cuh  helper.h  macro.h  prime_helper.cuh  sieve.h  sieve_resources.h  sk1024.h  streams_events.h  test.h  unroller.cuh  util.h
src/CUDA/prime/: bucket_sieve.cu  combo_sieve.cu  fermat.cu  sieve.cu  test.cu
src/LLC/: CMakeLists.txt  base_uint.cpp  bignum.cpp  cpu_hash.cpp  cpu_primesieve.cpp  cpu_primetest.cpp  cuda_hash.cpp  cuda_prime.cpp  global.cpp  origins.cpp  prime.cpp  prime2.cpp
src/LLC/inc/LLC/hash/: SK.h  macro.h
src/LLC/inc/LLC/hash/SK/: KeccakHash.h  skein.h  (+5 more)
src/LLC/inc/LLC/types/: base_uint.h  bignum.h  uint1024.h
src/LLC/include/: global.h  work_info.h
src/LLC/prime/: origins.h  prime.h  prime2.h
src/LLC/src/LLC/types/: base_uint.cpp  bignum.cpp
src/LLC/types/: bignum.h  cpu_hash.h  cpu_primesieve.h  cpu_primetest.h  cuda_hash.h  cuda_prime.h  proof.h  uint1024.h
src/LLP/: CMakeLists.txt  base_connection.cpp  block.hpp  connection.cpp  miner.cpp  outbound.cpp  packet.hpp  pool_protocol.hpp  socket.cpp  utils.hpp  worker.cpp
src/LLP/include/: base_address.h  network.h
src/LLP/templates/: base_connection.h  miner.h  outbound.h  socket.h  worker.h
src/Legacy/: main.cpp  miner.cpp  miner.h  prime.cpp  prime.h  serverconnection.cpp  serverconnection.h
src/TAO/: CMakeLists.txt
src/TAO/Ledger/: block.cpp  difficulty.cpp
src/TAO/Ledger/include/: constants.h  difficulty.h  timelocks.h
src/TAO/Ledger/types/: block.h
src/TAO/inc/TAO/Ledger/: difficulty.h
src/TAO/src/TAO/Ledger/: difficulty.cpp
src/Util/: args.cpp  config.cpp  debug.cpp  filesystem.cpp  ini_parser.cpp  prime_config.cpp  signals.cpp  version.cpp
src/Util/include/: args.h  bitmanip.h  convert.h  csv.h  enumerator.h  ini_parser.h  linked_list.h  memory.h  prime_config.h  prime_list.h  print_colors.h  signals.h  string.h  version.h
src/chrono/: CMakeLists.txt  timer.hpp  timer_factory.hpp
src/config/: CMakeLists.txt  config.cpp
src/config/inc/config/: config.hpp  pool.hpp  stats_printer_config.hpp  types.hpp  validator.hpp  worker_config.hpp
src/config/src/config/: config.cpp  validator.cpp
src/cpu/: CMakeLists.txt  worker_hash.cpp  worker_hash.hpp  worker_software_hash.cpp  worker_software_hash.hpp
src/cpu/inc/cpu/: worker_hash.hpp  worker_prime.hpp
src/cpu/src/cpu/: worker_hash.cpp  worker_prime.cpp
src/cpu/src/cpu/prime/: chain_sieve.cpp  chain_sieve.hpp  prime.cpp  prime.hpp
src/fpga/: CMakeLists.txt  worker_fpga.cpp  worker_fpga.hpp  worker_hash.cpp  worker_hash.hpp
src/fpga/inc/fpga/: worker_hash.hpp
src/fpga/src/fpga/: worker_hash.cpp
src/gpu/: CMakeLists.txt  worker_hash.cpp
src/gpu/inc/gpu/: prime_common.hpp  worker_hash.hpp  worker_prime.hpp
src/gpu/src/gpu/: worker_hash.cpp  worker_prime.cpp
src/gpu/src/gpu/cuda/: constants.cu  frame_resources.h  macro.h  sk1024.cu  util.cu
src/gpu/src/gpu/cuda_hash/: constants.h  hash_helper.cuh  sk1024.h  util.h
src/gpu/src/gpu/cuda_prime/: cuda_chain.cu  cuda_chain.cuh  fermat.cuh  fermat_test.cu  fermat_test.cuh  fermat_test.hpp  fermat_test_impl.cu  fermat_test_impl.cuh  find_chain.cu  find_chain.cuh  gpu_helper.hpp  sieve.cu  sieve.cuh  sieve.hpp  sieve_impl.cu  sieve_impl.cuh  sieve_lookup_tables.cuh  sieve_small_prime_constants.cuh
src/gpu/src/gpu/prime/: chain.cpp  chain.hpp  chain_sieve.cpp  chain_sieve.hpp  prime.cpp  prime.hpp  prime_tests.cpp  prime_tests.hpp  sieve.cpp  sieve.hpp  sieve_utils.hpp  small_sieve_tools.cpp  small_sieve_tools.hpp
src/hash/: CMakeLists.txt  byte_utils.hpp  int_array.hpp  nexus_keccak.cpp  nexus_keccak.hpp  nexus_skein.cpp  nexus_skein.hpp
src/hash/inc/hash/: byte_utils.hpp  int_array.hpp  nexus_hash_utils.hpp  nexus_keccak.hpp  nexus_skein.hpp  uint1024.h
src/hash/src/hash/: nexus_keccak.cpp  nexus_skein.cpp
src/include/: config.hpp  packet.hpp  statistics.hpp  stats_collector.hpp  utils.hpp  worker.hpp
src/include/LLP/: block.hpp
src/include/config/: config.hpp  pool.hpp  stats_printer_config.hpp  types.hpp  worker_config.hpp
src/include/protocol/: pool.hpp  protocol.hpp  solo.hpp
src/include/stats/: stats_collector.hpp  stats_printer.hpp  stats_printer_console.hpp  stats_printer_file.hpp  types.hpp
src/network/: CMakeLists.txt  component.hpp  component_impl.hpp  connection.hpp  create_component.cpp  create_component.hpp  endpoint.cpp  endpoint.hpp  socket.hpp  socket_factory.hpp  socket_factory_impl.hpp  types.hpp  utility.hpp
src/network/inc/network/: component.hpp  connection.hpp  create_component.hpp  endpoint.hpp  socket.hpp  socket_factory.hpp  types.hpp
src/network/src/network/: component_impl.hpp  create_component.cpp  endpoint.cpp  socket_factory_impl.hpp
src/network/src/network/tcp/: connection_impl.hpp  protocol_description.hpp  socket_impl.hpp
src/network/tcp/: connection_impl.hpp  protocol_description.hpp  socket_impl.hpp
src/prime_gpu/: CMakeLists.txt  fermat_test.cu  fermat_test.cuh
src/protocol/: CMakeLists.txt  pool.cpp  solo.cpp
src/protocol/inc/protocol/: pool.hpp  pool_base.hpp  pool_legacy.hpp  protocol.hpp  solo.hpp
src/protocol/src/protocol/: pool.cpp  pool_base.cpp  pool_legacy.cpp  solo.cpp
src/stats/: CMakeLists.txt  stats_collector.cpp  stats_printer_console.cpp  stats_printer_file.cpp
src/stats/inc/stats/: stats_collector.hpp  stats_printer.hpp  stats_printer_console.hpp  stats_printer_file.hpp  types.hpp
src/stats/src/stats/: stats_collector.cpp
src/worker/: CMakeLists.txt  worker.hpp
src/worker_software_hash/: worker_software_hash.cpp  worker_software_hash.hpp
(+64 files in other folders)
